Fix:Fix output book response